# plxtools

./: .gitignore  LICENSE  README.md  pyproject.toml
devices/: pex8696.yaml
docs/hardware/: dell-c410x.md
docs/reference/: README.md
src/plxtools/: __init__.py  cli.py  discovery.py
src/plxtools/backends/: __init__.py  base.py  i2c.py  mock.py  pcie_mmap.py  pcie_sysfs.py  serial.py
src/plxtools/devices/: __init__.py  base.py  loader.py
src/plxtools/devices/definitions/: pex8733.yaml  pex880xx.yaml
src/plxtools/eeprom/: __init__.py  controller.py  decoder.py
src/plxtools/switchdb/: __init__.py  _broadcom_devices.py  _plx_devices.py  _registry.py  _vendors.py  models.py
tests/: __init__.py  conftest.py  test_backends.py  test_devices.py  test_eeprom.py  test_i2c.py  test_pcie.py  test_serial.py  test_switchdb.py
