[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plxtools"
version = "0.1.0"
description = "Tool for reconfiguring and controlling PLX/PEX PCIe switching ICs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tim Ansell", email = "mithro@mithis.com" },
]
keywords = ["pcie", "plx", "pex", "eeprom", "hardware"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "smbus2>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy",
    "ruff",
    "ipython",
    "types-PyYAML",
]

[project.scripts]
plxtool = "plxtools.cli:main"

[project.urls]
Homepage = "https://github.com/mithro/plxtools"
Repository = "https://github.com/mithro/plxtools"
Issues = "https://github.com/mithro/plxtools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plxtools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PTH"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
